Major updates to fix some bugs

--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -51,11 +51,25 @@ PLATFORM.Pago Pago, American Samoa : SAMOA
 PLATFORM.La Reunion, France : LA REUNION ISLAND
 PLATFORM.San Marco Station - Malindi, Kenya : MALINDI
 
+[AGENCY]
+Nairobi : MeteoSwiss
+Irene : SAWS
+Watukosek - Java Is. : Hokkaido_U
+Pago Pago : NOAA-CMDL
+Heredia : U_Colorado
+Alajuela : U_Colorado
+Hilo : NOAA-CMDL
+Kuala Lumpur : MMS
+Natal : INPE
+La Reunion : U_LaReunion
+San Pedro : U_Colorado
+
 [NAME CONVERTER]
 Watukosek - Java Is.: Watukosek (Java)
 Pago Pago: Samoa
 Kuala Lumpur: Sepang Airport
-La Reunion: La Reunion Island
+La Reunion : La Réunion
+Hilo : Hilo (HI)
 
 [NDACC]
 host: ftp.cpc.ncep.noaa.gov
