--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -66,8 +66,8 @@ San Pedro : U_Colorado
 
 [NAME CONVERTER]
 Watukosek - Java Is.: Watukosek (Java)
-Pago Pago: Samoa
-Kuala Lumpur: Sepang Airport
+Pago Pago: Samoa (Cape Matatula)
+Kuala Lumpur: Petaling Jaya
 La Reunion : La Réunion
 Hilo : Hilo (HI)
 
