--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -41,6 +41,12 @@ CONTENT.Category : OzoneSonde
 CONTENT.Level : 1.0
 CONTENT.Form : 1
 
+[VAISALA]
+CONTENT.Class : WOUDC
+CONTENT.Category : OzoneSonde
+CONTENT.Level : 1.0
+CONTENT.Form : 1
+
 DATA_GENERATION.Agency : NOAA-CMDI
 
 PLATFORM.Suva, Fiji : SUVA (FIJI)
