Switch back to old masterfile process
Switch back to old masterfile process

fix config

--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -1,3 +1,35 @@
+[Instrument Type ID]
+Brewer: 1
+Dobson: 3
+Japanese Dobson: 4
+Filter: 9
+Microtops: 99
+SAOZ: 99
+Hoelper: 99
+SpecialO3: 99
+Vassey: 15
+Unknown: 99
+PION: 99
+
+[Obs Code]
+DS: 0
+FZ: 9
+FM: 1
+ZS: 2
+10: 1
+GI: 9
+FS: 9
+SZ: 9
+ZC: 4
+ZB: 9
+
+[WLCode]
+10: 1
+Dobson: 0
+Brewer: 9
+Filter: 8
+Microtops: 0
+
 [Halley]
 agency_name: BAS
 sci_auth: J. Shanklin
@@ -41,12 +73,6 @@ CONTENT.Category : OzoneSonde
 CONTENT.Level : 1.0
 CONTENT.Form : 1
 
-[VAISALA]
-CONTENT.Class : WOUDC
-CONTENT.Category : OzoneSonde
-CONTENT.Level : 1.0
-CONTENT.Form : 1
-
 DATA_GENERATION.Agency : NOAA-CMDI
 
 PLATFORM.Suva, Fiji : SUVA (FIJI)
@@ -56,6 +82,30 @@ PLATFORM.San Cristobal Is., Galapagos : SAN CRISTOBAL
 PLATFORM.Pago Pago, American Samoa : SAMOA
 PLATFORM.La Reunion, France : LA REUNION ISLAND
 PLATFORM.San Marco Station - Malindi, Kenya : MALINDI
+
+[NDACC]
+host: ftp.cpc.ncep.noaa.gov
+file_list : ndacc/ndacc_csv_for_geomon.txt
+
+CONTENT.Class : WOUDC
+CONTENT.Category : OzoneSonde
+CONTENT.Level : 1.0
+CONTENT.Form : 1
+
+PLATFORM.ALERT NWT : ALERT / ALERT GAW LAB
+PLATFORM.ARRIVAL HGTS : ARRIVAL HEIGHTS / McMURDO
+PLATFORM.EUREKA : EUREKA / EUREKA LAB
+
+ndacc_woudc_ftp_folder : TEST
+
+[Network Drive Map]
+Devweb : Z
+
+[VAISALA]
+CONTENT.Class : WOUDC
+CONTENT.Category : OzoneSonde
+CONTENT.Level : 1.0
+CONTENT.Form : 1
 
 [AGENCY]
 Nairobi : MeteoSwiss
@@ -76,21 +126,6 @@ Pago Pago: Samoa (Cape Matatula)
 Kuala Lumpur: Petaling Jaya
 La Reunion : La Réunion
 Hilo : Hilo (HI)
-
-[NDACC]
-host: ftp.cpc.ncep.noaa.gov
-file_list : ndacc/ndacc_csv_for_geomon.txt
-
-CONTENT.Class : WOUDC
-CONTENT.Category : OzoneSonde
-CONTENT.Level : 1.0
-CONTENT.Form : 1
-
-PLATFORM.ALERT NWT : ALERT / ALERT GAW LAB
-PLATFORM.ARRIVAL HGTS : ARRIVAL HEIGHTS / McMURDO
-PLATFORM.EUREKA : EUREKA / EUREKA LAB
-
-ndacc_woudc_ftp_folder : TEST
 
 [AMES]
 ALERT NWT : Alert / Alert Gaw Lab
