Fixed missing platform information, removed text from version number, added updated agency mappings.

--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -119,6 +119,9 @@ Kuala Lumpur : MMS
 Natal : INPE
 La Reunion : U_LaReunion
 San Pedro : U_Colorado
+Hanoi : HSSRV
+Suva : NOAA-CMDL
+Ascension Island : NASA-WFF
 
 [NAME CONVERTER]
 Watukosek - Java Is.: Watukosek (Java)
