Fixed SHADOZ data format issues.

--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -126,7 +126,7 @@ Ascension Island : NASA-WFF
 [NAME CONVERTER]
 Watukosek - Java Is.: Watukosek (Java)
 Pago Pago: Samoa (Cape Matatula)
-Kuala Lumpur: Petaling Jaya
+Kuala Lumpur: Sepang Airport
 La Reunion : La Réunion
 Hilo : Hilo (HI)
 
