--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -119,11 +119,14 @@ Kuala Lumpur : MMS
 Natal : INPE
 La Reunion : U_LaReunion
 San Pedro : U_Colorado
+Hanoi : HSSRV
+Suva : NOAA-CMDL
+Ascension Island : NASA-WFF
 
 [NAME CONVERTER]
 Watukosek - Java Is.: Watukosek (Java)
 Pago Pago: Samoa (Cape Matatula)
-Kuala Lumpur: Petaling Jaya
+Kuala Lumpur: Sepang Airport
 La Reunion : La Réunion
 Hilo : Hilo (HI)
 
