--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -120,6 +120,8 @@ Natal : INPE
 La Reunion : U_LaReunion
 San Pedro : U_Colorado
 Hanoi : HSSRV
+Ha Noi : HSSRV
+
 Suva : NOAA-CMDL
 Ascension Island : NASA-WFF
 
@@ -129,6 +131,7 @@ Pago Pago: Samoa (Cape Matatula)
 Kuala Lumpur: Sepang Airport
 La Reunion : La Réunion
 Hilo : Hilo (HI)
+Ha Noi : Hanoi
 
 [AMES]
 ALERT NWT : Alert / Alert Gaw Lab
