Fixed bad instrument model bug and added automatic platform lookup via config file.

--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -136,22 +136,26 @@ Ha Noi : Hanoi
 [AMES]
 ALERT NWT : Alert / Alert Gaw Lab
 ANDOYA : Andoya
+Boulder : Boulder ESRL HQ (CO)
 DUMONT D'URVOZONE: Dumont D'Urville
 EUREKA: Eureka / Eureka Lab
 FARADAY: Faraday / Vernadsky
-HILO: Hilo
+HILO: Hilo (HI)
 HOHENPEISSENOZONE: Hohenpeissenberg
 IZANA: Iza\xf1a (Tenerife)
 LAUDER: Lauder
 LEGIONOWO: Legionowo
+LERWICKA: Lerwick
+LERWICKB: Lerwick
 NATAL: Natal
 NEUMAYER: Neumayer
+Neumayer: Neumayer
 NY-ALESUND : Ny Alesund
 OHP: Haute Provence
 PARAMARIBO: Paramaribo
 PAYERNE: Payerne
 PRAHA: Praha
-REUNION ISL: La Reunion Island
+REUNION ISL: La Réunion
 SCORESBYSUNDOZONE: Scoresbysund
 THULE: Thule
 TORONTO: Toronto
