--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Git: https://github.com/woudc/woudc-formats.git
 Package: woudc-formats
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, python-pkg-resources, woudc-extcsv
-Homepage: http://woudc.org
+Homepage: https://woudc.org
 Description: WMO WOUDC format transformation library
  woudc-formats is a Python package for converting non-standard data formats
  into WOUDC extended CSV.
