Update appveyor to install numpy.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ environment:
 
 install:
   - set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
+  - pip.exe install numpy
   - pip.exe install -r requirements.txt
   - pip.exe install -r requirements-dev.txt
   - python setup.py install
