--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get install -y pandoc devscripts debhelper python-setuptools
 
 install:
-  - pip install -r requirements.txt
+  - pip install --no-deps -r requirements.txt
   - pip install -r requirements-dev.txt
   - python setup.py install
 
