--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ environment:
 install:
   - set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
   - pip.exe install numpy
+  - pip.exe install pyproj==1.9.6
   - pip.exe install --no-deps -r requirements.txt
   - pip.exe install -r requirements-dev.txt
   - python setup.py install
