--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ environment:
 
 install:
   - set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
+  - python -m pip install -U pip
   - pip.exe install numpy
   - pip.exe install pyproj==1.9.6
   - pip.exe install --no-deps -r requirements.txt
