--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - pip install --no-deps -r requirements.txt
   - pip install -r requirements-dev.txt
   - python setup.py install
+  - pip freeze
 
 script:
   - python setup.py test
