--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
   - python setup.py test
-  - find -type f -name "*.py" | grep -v build | xargs flake8 --ignore=E402
+  - find . -type f -name "*.py" | grep -v build | xargs flake8 --ignore=E402
 
 after_success:
   - coverage run --source woudc_formats setup.py test
