--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: woudc-formats
 Section: python
 Priority: optional
 Maintainer: WOUDC <ec.woudc.ec@canada.ca>
-Build-Depends: debhelper (>= 9), python, python-setuptools
+Build-Depends: debhelper (>= 9), python3, python3-setuptools
 Standards-Version: 3.9.5
-X-Python-Version: >= 2.7
+X-Python-Version: >= 3.4
 Vcs-Git: https://github.com/woudc/woudc-formats.git
 
 Package: woudc-formats
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-pkg-resources, woudc-extcsv
+Depends: ${misc:Depends}, ${python:Depends}, python3-pkg-resources, woudc-extcsv
 Homepage: https://woudc.org
 Description: WMO WOUDC format transformation library
  woudc-formats is a Python package for converting non-standard data formats
