--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       run: sudo apt-get install -y dh-python devscripts fakeroot debhelper python3-all python3-setuptools
     - name: Install requirements 📦
       run: |
+        pip3 install cython
         pip3 install --no-deps -r requirements.txt
         python3 -m pip install --upgrade pip
         pip3 install -r requirements-dev.txt
