--- a/debian/rules
+++ b/debian/rules
@@ -9,5 +9,10 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+export PYBUILD_NAME=woudc_formats
+
 %:
-	dh $@ --with python3 --build=pybuild
+	dh $@ --with python3 --buildsystem pybuild
+
+override_dh_auto_test:
+	@echo "nocheck set, not running tests"
