update AMES station

--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -155,7 +155,7 @@ PARAMARIBO: Paramaribo
 PAYERNE: Payerne
 PRAHA: Praha
 REUNION ISL: La Réunion
-SCORESBYSUNDOZONE: Scoresbysund
+SCORESBYSUND: Scoresbysund
 THULE: Thule
 TORONTO: Toronto
 TSUKUBA: Tateno / Tsukuba
