update to SHADOZ 6 model

--- a/woudc_formats/resource.cfg
+++ b/woudc_formats/resource.cfg
@@ -82,6 +82,7 @@ PLATFORM.San Cristobal Is., Galapagos : SAN CRISTOBAL
 PLATFORM.Pago Pago, American Samoa : SAMOA
 PLATFORM.La Reunion, France : LA REUNION ISLAND
 PLATFORM.San Marco Station - Malindi, Kenya : MALINDI
+PLATFORM.Ascension Island : Ascension Island
 
 [NDACC]
 host: ftp.cpc.ncep.noaa.gov
